--- a/m/ma/mai/mailchimp.com.html
+++ b/m/ma/mai/mailchimp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mailchimp.com privacy policy that was archived on 2005-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051227041548id_/http%3A//www.mailchimp.com/privacy.phtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mailchimp.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032425id_/http%3A//mailchimp.com/privacy.phtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -23,21 +23,25 @@ hr.thin {border: 0px;background-color: #DDD;height: 1px;margin: 5 0 5 0;padding:
 <div style="padding:20px; background-color:#FFFFFF; border:1px solid #DDD">
 
 
-<table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-bottom:1px solid #DDD;"> 
+<table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-bottom:1px solid #DDD;">
 <tbody><tr>
 <td><h1>MailChimp Privacy Policy</h1></td>
 <td align="right" valign="middle"><a href="http://www.rocketsciencegroup.com" target="_blank"><img src="http://www.mailchimp.com/img/mailchimp_rsg.gif" width="318" height="103" border="0" alt="MailChimp is a product of The Rocket Science Group"></a></td>
 </tr>
 </tbody></table>
-<p>
 
+<p>
 </p><h3>A. Our Pledge to You</h3>
+
+<a href="http://www.truste.org/ivalidate.php?url=www.mailchimp.com&amp;sealid=101" target="_blank"><img src="/img/clickseal.gif" width="91" height="73" alt="Truste - Click to verify" border="0" align="right" hspace="10" vspace="6"></a>
+
 <ol>
-<li>When you sign up for a free trial, you will not be nagged into paying us money, and you will not be automatically subscribed to any promotional emails.
-</li><li>Your personal information (and your customer information) will be kept strictly confidential. It is never sold, given away, or shared with anyone. 
+<li>When you sign up for a free trial, you will not be nagged into paying us money, and you will not be automatically subscribed to any promotional emails. 
+</li><li>Your personal information (and your customer information) will be kept strictly confidential. It is never sold, given away, or shared with anyone, unless we're required to by law.
 </li><li>We do not send promotional messages to you unless you explicitly request to receive them. 
 </li><li>We don't believe in sending those annoying "why won't you buy?" emails to free trial members while they are evaluating our system. We may, however, send an automated email asking you if you'd like to deactivate your free trial (if you don't use it after signing up). We like to remove dormant accounts from our system, to keep our database clean.
 </li><li>Nobody is automatically subscribed to any general MailChimp marketing emails. We believe people should only receive emails if they opted in for them. If you do subscribe to any MailChimp marketing, we always provide a link to unsubscribe from our list.
+</li><li>In order to use MailChimp, you must first complete the "Free Trial" registration form and create a user name and password.  During registration you are required to give contact information (such as name and email address). We use this information to send you a confirmation link, which is used to  activate your account. You have the option to provide demographic information (such as income level and gender) to us; we encourage you to submit this information so we can provide you a more personalized experience on our site. 
 </li></ol>
 
 
@@ -49,32 +53,38 @@ hr.thin {border: 0px;background-color: #DDD;height: 1px;margin: 5 0 5 0;padding:
 
 
 <h3>C. Transactional and Mandatory Emails That We'll Be Sending You</h3>
+These are the types of emails you can expect to receive from MailChimp if you sign up for our services.
 <ol>
-<li>When you use your credit card to place an order with MailChimp, you will naturally be receiving an email receipt for your purchase. 
-</li><li>If you have not logged into MailChimp's system for 6 months, your account is considered "dormant." To keep our system clean, we periodically send followup emails to dormant accounts with a link allowing them to permanently shut down their accounts. 
-</li><li>All registered, active (non-dormant), MailChimp user accounts may receive mandatory "System Alert" messages which usually consist of: planned outages, system improvements (that may directly affect your account), version updates, point releases, abuse warnings, and important customer service information. Our "System Alert" messages are brief and non-promotional in nature. We promise to keep them as boring as possible.
-</li><li>If you sign up for a free trial, but never activate your account or log in, we may send an automatic followup email within a few weeks (in case you never got your login instructions the first time).
-</li><li>If you submit a help ticket to MailChimp, our system might automatically send you a brief survey email, requesting your feedback on how your issue was resolved. We use this information to improve our customer service. Submitting a help ticket does not add you to any mailing list.
+<li>Email Receipts - When you use your credit card to place an order with MailChimp, you will naturally be receiving an email receipt for your purchase.
+</li><li>Terminate your account - If you have not logged into MailChimp's system for 6 months, your account is considered "dormant." To keep our system clean, we periodically send followup emails to dormant accounts with a link allowing them to permanently shut down their accounts.
+</li><li>System Alerts - All registered, active (non-dormant), MailChimp user accounts may receive mandatory "System Alert" messages which usually consist of: planned outages, system improvements (that may directly affect your account), version updates, point releases, abuse warnings, and important customer service information. Our "System Alert" messages are brief and non-promotional in nature. We promise to keep them as boring as possible.
+</li><li>Free trial reminders - If you sign up for a free trial, but never activate your account or log in, we may send an automatic followup email within a few weeks (in case you never got your login instructions the first time).
+</li><li>Automated responses - If you submit a help ticket to MailChimp, our system might automatically send you a brief survey email, requesting your feedback on how your issue was resolved. We use this information to improve our customer service. Submitting a help ticket does not add you to any mailing list.
 </li></ol>
 
 
 <h3>D. Promotional Emails That We Send</h3>
-We do not send promotional emails unless you have requested them. 
+We do not send promotional emails unless you have requested them.
 <ol>
-<li>From time to time, we send a "MailChimp News" email newsletter to registered users who affirmatively select the "opt-in" checkbox in their account settings for "Yes, send me MailChimp News." We do not automatically send this newsletter to all users. If you opt-in, then later change your mind, there are 2 ways to opt-out: 1) Click the "unsubscribe link" that we include in every newsletter, or 2) Log in to MailChimp, and un-check the box.
+<li>From time to time, we send a "MailChimp News" email newsletter to registered users who affirmatively select the "opt-in" checkbox in their account settings for "Yes, send me MailChimp News." We do <b>not</b> automatically send this newsletter to all users. If you opt-in, then later change your mind, there are 2 ways to opt-out: 1) Click the "unsubscribe link" that we include in every newsletter, or 2) Log in to MailChimp, and un-check the box.
 </li></ol>
 
 
 
-<h3>E. Use of Cookies</h3>
+<h3>E. Personally Identifiable Information, and Our Use of Cookies</h3>
 <ol>
-<li>When you visit our website, we don't automatically collect any personally identifiable information about you.
+<li>We do not share your personally identifiable information with any 3rd parties.
+</li><li>When you visit our website, we don't automatically collect any personally identifiable information about you.
 </li><li>The cookies we place do not personally identify visitors on our website, unless the visitor is a registered user of MailChimp.
 </li><li>We temporarily store session information, so that registered users do not have to login every time they visit the site.
 </li><li>We place temporary cookies on web pages so that we can see how visitors use our website, but they do not personally identify users (we use this information to improve our website experience)
 </li><li>We place a transparent tracking bug on certain web pages to track the performance of online ads placed on other websites. The trackers do not personally identify any visitors to our website. They simply tell us about the performance of our online advertising
 </li><li>We do not partner with or have special relationships with any ad server companies.
-</li><li>When we send emails to our own registered MailChimp customers, we'll sometimes track who opened and who clicked. We do this to measure the performance of our email campaigns, and to improve our offerings to specific customer segments. 
+</li><li>When we send emails to our own registered MailChimp customers, we'll sometimes track who opened and who clicked. We do this to measure the performance of our email campaigns, and to improve our offerings to specific customer segments.
+</li><li>MailChimp customers: if your personally identifiable information changes, or if you no longer desire our service, you may update your account or deactivate it in the "Account Settings" area in MailChimp, or by contacting us by telephone or postal mail at the <a href="/contact.phtml">contact information posted on this page.</a>
+</li><li>We reserve the right to disclose your personally identifiable information as required by law and when we believe that disclosure is necessary to protect our rights and/or comply with a judicial proceeding, court order, or legal process served on our Web site.
+</li><li>If we decide to change our privacy policy, we will post those changes to this privacy statement, the homepage, and other places we deem appropriate so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it.  We reserve the right to modify this privacy statement at any time, so please review it frequently.  If we make material changes to this policy, we will notify you here, by email, or by means of a notice on our homepage.
+</li><li>We use other third parties to handle secure credit card transaction processing from our site.  When you make purchases on MailChimp, we send your billing information as necessary for the third party to process your order.
 </li></ol>
 <p></p>
 
@@ -85,6 +95,7 @@ We do not send promotional emails unless you have requested them.
 </li><li>MailChimp accounts require username and password to log in. When you're finished using MailChimp, please click the "log out" link in the top right corner of your screen, to prevent someone from using your computer to access your account
 </li><li>Due to the sensitive nature of your recipient lists, we do not re-send forgotten passwords. Users must follow online instructions to reset their passwords if they forget them.
 </li><li>Account passwords are encrypted from our own system admins. We cannot see your passwords. We can only reset them.
+
 </li></ol>
 
 
@@ -94,7 +105,11 @@ We do not send promotional emails unless you have requested them.
 </li></ol>
 
 <br>
-
+<hr class="thin">
+<h3>Truste Privacy Program</h3>
+The Rocket Science Group, LLC is a licensee of the TRUSTe Privacy Program.  TRUSTe is an independent, non-profit organization whose mission is to build user's trust and confidence in the Internet by promoting the use of fair information practices.  This privacy statement covers the site http://www.mailchimp.com.  Because this Web site wants to demonstrate its commitment to your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe.
+<br><br>
+If you have questions or concerns regarding this statement, you should first contact The Rocket Science Group <a href="/contact.phtml">using this form</a>.  If you do not receive acknowledgement of your inquiry or your inquiry has not been satisfactorily addressed, you should <a href="http://www.truste.org/consumers/watchdog_complaint.php" target="_blank">contact TRUSTe here</a>.  TRUSTe will then serve as a liaison with us to resolve your concerns.
 <hr class="thin">
 
 <br>
@@ -117,6 +132,15 @@ Or email us <a href="contact.phtml">here.</a>
 
 <br><br>
 
+<i>Edited: May 15, 2006</i><br>
+<i>Summary of edits: Added the "unless required to by law" portion under A-1. Gave titles to the "types of emails to expect" under Section C.</i>
+<br><br>
+
+
+<i>Edited: March 1, 2006</i><br>
+<i>Summary of edits: Added Truste information, and added additional verbiage about how we never use or share personally identifiable information.</i>
+<br><br>
+
 <i>Edited: November 30, 2005</i><br>
 <i>Summary of edits: Added "the types of emails we send" to better set expectations. Added information about cookies, and what we track in our own emails to customers and opt-in subscribers. Moved items from the "Pledge" to the "types of emails we send" sections.</i>
 <br><br>
@@ -134,6 +158,10 @@ Or email us <a href="contact.phtml">here.</a>
 
 <i>Edited: September 30, 2005</i><br>
 <i>Summary of edits: Changed header titles, to make them less vague.</i>
+
+<br><br>
+<i>Effective Date: September 30, 2001</i><br>
+
 </span>
 
 </div>
