--- a/j/js/jse/jsexnetwork.com.html
+++ b/j/js/jse/jsexnetwork.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jsexnetwork.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212143151id_/http%3A//www.jsexnetwork.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jsexnetwork.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032539id_/http%3A//jsexnetwork.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>JSN</title>
