--- a/i/id/idf/idfpr.com.html
+++ b/i/id/idf/idfpr.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the idfpr.com privacy policy that was archived on 2005-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051224011503id_/http%3A//www.idfpr.com/privacystatement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the idfpr.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032607id_/http%3A//www.idfpr.com/privacystatement.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>State of Illinois | Department of Financial and Professional Regulation</title>
@@ -96,12 +96,12 @@
   		</tr>
   		<tr>
     	
-    <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.ins.state.il.us/default2.asp'" onmouseout="this.className='tmpl_menu';" height="10"> 
+    <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/doi/default2.asp'" onmouseout="this.className='tmpl_menu';" height="10"> 
       <a href="http://www.idfpr.com/doi/default2.asp" class="tmpl_menulinks" target="_parent">Insurance</a></td>
  		</tr>
   		<tr>
     	
-    <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.ildpr.com/default.asp'" onmouseout="this.className='tmpl_menu';" height="10"> 
+    <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/dpr/default.asp'" onmouseout="this.className='tmpl_menu';" height="10"> 
       <a href="http://www.idfpr.com/dpr/default.asp" class="tmpl_menulinks" target="_parent">Professional 
       Regulation</a></td>
   		</tr> 
@@ -236,7 +236,11 @@
     <td class="tmpl_sidebackground" width="160" valign="top" height="379">
       <!-- Right features area begins here -->
 <link href="../DFPRstyle.css" rel="stylesheet" type="text/css">
-
+<style type="text/css">
+<!--
+.style6 {color: #0000CC}
+-->
+</style>
 <table cellspacing="1" cellpadding="2" width="100%" border="0" class="tmpl_brdrclr"> 
   <tbody><tr> 
     <td class="tmpl_tabbackgroundcolor" width="100%" height="15"> 
@@ -267,47 +271,49 @@
       <table height="15" cellspacing="1" cellpadding="2" width="100%" class="tmpl_brdrclr" border="0">
         <tbody><tr> 
           <td class="tmpl_tabbackgroundcolor" valign="center" align="middle" width="100%"> 
-            IDFPR Headlines </td>
+            IDFPR Latest News </td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/NEWSRLS/121905ABNAMROFine.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/NEWSRLS/121905ABNAMROFine.asp" class="tmpl_menulinks">Illinois Signs Consent Orders Against ABN AMRO</a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/newsrls/060906InsuranceDisciplines.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/newsrls/060906InsuranceDisciplines.asp" class="tmpl_menulinks">Division of Insurance May 2006 Disciplinary Actions </a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/newsrls/121505HolidayTips.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/newsrls/121505HolidayTips.asp" class="tmpl_menulinks">Does Your Insurance Policy Have You Covered?</a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/dpr/news/DISCPLN/0604_dis.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/dpr/news/DISCPLN/0604_dis.pdf" class="tmpl_menulinks"> Professional Regulation April 2006 Discipline Report Available </a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.illinois.gov/PressReleases/ShowPressRelease.cfm?SubjectID=3&amp;RecNum=4518'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.illinois.gov/PressReleases/ShowPressRelease.cfm?SubjectID=3&amp;RecNum=4518" class="tmpl_menulinks">Governor Blagojevich Directs State Regulators to Aggressively Enforce New   Payday Loan Reform Law</a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/newsrls/052506SalonSafetyRules.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/newsrls/052506SalonSafetyRules.asp" class="tmpl_menulinks">Blagojevich Administration Enacts Salon Safety Rules to Prevent Infections</a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/dpr/news/DISCPLN/0510_dis.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/dpr/news/DISCPLN/0510_dis.pdf" class="tmpl_menulinks"> Professional Regulation October 2005 Disciplinary Report Available</a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.obre.state.il.us/CBT/WELCNEWS/NEWS/2006/BankingChicagoOfficeMoveForMainPage.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.obre.state.il.us/CBT/WELCNEWS/NEWS/2006/BankingChicagoOfficeMoveForMainPage.pdf" class="tmpl_menulinks">NOTICE: Division of Banking relocating Chicago offices</a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/DOI/pressRelease/pr05/110905MM.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/DOI/pressRelease/pr05/110905MM.pdf" class="tmpl_menulinks"> November 9 - ISMIE Rate Hearing Transcript </a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/newsrls/050906InsureU.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/newsrls/050906InsureU.asp" class="tmpl_menulinks">Blagojevich Administration Announces New Public Education Program to Protect Illinois Families</a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/DOI/pressRelease/pr05/092705MM.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/DOI/pressRelease/pr05/092705MM.pdf" class="tmpl_menulinks"> September 27 - ISMIE Rate Hearing Transcript </a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/DOI/Main/FloodInsuranceConsumerAlert.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/DOI/Main/FloodInsuranceConsumerAlert.pdf" class="tmpl_menulinks">Division of Insurance Consumer Alert - Flood Insurance Awareness<br>
+            <br>
+          </a><a href="http://www.idfpr.com/DOI/Main/FloodInsuranceConsumerAlert(spanish).pdf" class="tmpl_menulinks style6"><strong>En Español</strong></a></td>
         </tr>
-        <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/DPR/NEWS/DISCPLN/06_09Banks_dis.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/DPR/NEWS/DISCPLN/06_09Banks_dis.pdf" class="tmpl_menulinks"> Real Estate Disciplines Available for June - September 2005 </a></td>
-        </tr>
-        <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/DOI/pressRelease/pr05/10042005MedMalRateIncrease.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/DOI/pressRelease/pr05/10042005MedMalRateIncrease.pdf" class="tmpl_menulinks"> The Medical Malpractice Rate Increase Hearing with ISMIE Indemnity Company is continued to November 9, 2005 </a></td>
-        </tr>
-        <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/DPR/RE/realmain.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/DPR/RE/realmain.asp" class="tmpl_menulinks"> Real Estate Professions Move to Division of Professional Regulation </a></td>
-        </tr>
-        <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/newsrls/EmergencyDispensingGuidelines.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/newsrls/EmergencyDispensingGuidelines.pdf" class="tmpl_menulinks">Hurricane Katrina Emergency Dispensing Guidelines for 
 
- 
-          Pharmacists  </a></td>
+        <tr>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/newsrls/032706LOrenewals.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/newsrls/032706LOrenewals.asp" class="tmpl_menulinks"> Loan Originators Online Renewals Address Notice </a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/DOI/pressRelease/pr05/ISMIEIndemnity.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/DOI/pressRelease/pr05/ISMIEIndemnity.pdf" class="tmpl_menulinks"> Medical Malpractice Rate Increase Hearing Scheduled for 9/27/2005 with ISMIE Indemnity Company </a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.illinois.gov/PressReleases/ShowPressRelease.cfm?SubjectID=3&amp;RecNum=4808'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.illinois.gov/PressReleases/ShowPressRelease.cfm?SubjectID=3&amp;RecNum=4808" class="tmpl_menulinks">Blagojevich Administration announces initial results of crackdowns on unlawful mortgage brokerage firms</a></td>
         </tr>
         <tr>
-          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/DOI/pressRelease/pr05/ISMIEMutual.pdf'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/DOI/pressRelease/pr05/ISMIEMutual.pdf" class="tmpl_menulinks"> Medical Malpractice Rate Increase Hearing 
-  Scheduled for 9/27/2005 with ISMIE Mutual Insurance Company </a></td>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.illinois.gov/PRessReleases/PressReleasesListShow.cfm?RecNum=4750'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.illinois.gov/PRessReleases/PressReleasesListShow.cfm?RecNum=4750" class="tmpl_menulinks"> Blagojevich Administration Moves to Shut Down Unscrupulous Short-term Lenders</a></td>
+        </tr>
+        <tr>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='http://www.idfpr.com/newsrls/032706ContraceptiveRules.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="http://www.idfpr.com/newsrls/032706ContraceptiveRules.asp" class="tmpl_menulinks"> Gov Blagojevich Introduces New Rule To Ensure Women's Access To Prescription Contraceptives After New Tactic To Deny..... </a></td>
+        </tr>
+        <tr>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/NEWSRLS/03142006ISMIEDecision.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/NEWSRLS/03142006ISMIEDecision.asp" class="tmpl_menulinks"> IDFPR orders ISMIE to make changes to reduce rates paid by Illinois doctors</a></td>
+        </tr>
+        <tr>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/NEWSRLS/031306StormRecovery.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/NEWSRLS/031306StormRecovery.asp" class="tmpl_menulinks">Illinois Storm Recovery Announcement </a></td>
+        </tr>
+        <tr>
+          <td class="tmpl_menu" onmouseover="this.className='tmpl_menuover';" onclick="self.location='/newsrls/030906SafeAutoCDOrder.asp'" onmouseout="this.className='tmpl_menu';" height="10"><a href="/newsrls/030906SafeAutoCDOrder.asp" class="tmpl_menulinks">Ohio-based Auto Insurance Company Ordered To Cease and Desist Illegal Practices</a></td>
         </tr>
         <!-- End Feature Table -->
       </tbody></table>
