--- a/s/sa/sal/salesforce.com.html
+++ b/s/sa/sal/salesforce.com.html
@@ -1,27 +1,32 @@
-<!--The following is the downloaded HTML source of the salesforce.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215080904id_/http%3A//www.salesforce.com/statements.jsp%3Ffile%3Dprivacy%26src%3Dweb) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the salesforce.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032732id_/http%3A//www.salesforce.com/statements.jsp%3Ffile%3Dprivacy%26src%3Dweb) for the most accurate reproduction.-->
 
-<html><head>
-<title>
-		
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+
+	<title>
+	
 		CRM Software | Customer Relationship Management (CRM)</title>
 
-		
-<meta name="Description" content="SALESFORCE.COM - Rated #1 by InfoWorld for Second Straight Year. FREE 30-Day Trial and Demo. CRM starts at $65/month. We deliver affordable CRM solutions integrated and scalable online contact management applications such as sales force automation (SFA) for enterprise, mid-market, and small business companies.">
-<meta name="Keywords" content="free crm online, customer relationship management, crm leader, sfa, Salesforce.com on-demand solutions, crm solution, crm, crm software, contact management software, sales forecasting, customer care, customer relationship management software, sales force automation, customer support, contact management, customer relations, customer service management">
+	
+	<meta name="Description" content="SALESFORCE.COM - Rated #1 CRM Application by InfoWorld for third straight year. FREE 30-Day Trial and Demo. CRM starts at $65/month. We deliver affordable CRM solutions integrated and scalable online contact management applications such as sales force automation (SFA) for enterprise, mid-market, and small business companies.">
+	<meta name="Keywords" content="free crm online, customer relationship management, crm leader, sfa, Salesforce.com on-demand solutions, crm solution, crm, crm software, contact management software, sales forecasting, customer care, customer relationship management software, sales force automation, customer support, contact management, customer relations, customer service management">
+	
 
 	
-<meta name="robots" content="index, follow">
+
+	<meta name="robots" content="index, follow">
 
 
-<link rel="StyleSheet" href="/web-common/css/ie_global.css" type="text/css">
-<link rel="Shortcut Icon" href="/web-common/assets/logos/sfdc.ico">
-<script type="text/javascript" language="JavaScript" src="/web-common/js/global_functions.js"></script>
-<script type="text/javascript" language="JavaScript" src="/web-common/js/detectFlash.js"></script>
+	<link rel="StyleSheet" href="/web-common/css/ie_global.css" type="text/css">
+
+	<link rel="Shortcut Icon" href="/web-common/assets/logos/sfdc.ico">
+	<script type="text/javascript" language="JavaScript" src="/web-common/js/global_functions.js"></script>
+	<script type="text/javascript" language="JavaScript" src="/web-common/js/detectFlash.js"></script>
 </head>
 
-<body bgcolor="#EEEEEE" text="#000000" link="#003366" vlink="#666666" alink="#003366" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0">
-<center>
+<body text="#000000" link="#003366" vlink="#666666" alink="#003366">
+
+<div align="center">
 
 
 
@@ -162,7 +167,7 @@ Questions regarding this Statement or the practices of this Site should be direc
    <td width="21"><img src="/web-common/assets/1x1_spacer.gif" width="21" height="10"></td>
    <td width="100%" align="left">
       <table cellpadding="2" cellspacing="0" border="0">
-      <tbody><tr><td class="copyright">© Copyright 2000-2005 salesforce.com, inc. <a style="text-decoration:none;color:#666666;" href="/" title="Customer Relationship Management">Customer Relationship Management</a> (<a style="text-decoration:none;color:#666666;" href="/" title="CRM">CRM</a>) • All rights reserved <br> Various trademarks held by their respective owners.</td></tr>
+      <tbody><tr><td class="copyright">© Copyright 2000-2006 salesforce.com, inc. <a style="text-decoration:none;color:#666666;" href="/" title="Customer Relationship Management">Customer Relationship Management</a> (<a style="text-decoration:none;color:#666666;" href="/" title="CRM">CRM</a>) • All rights reserved <br> Various trademarks held by their respective owners.</td></tr>
       </tbody></table>
    </td></tr>
    </tbody></table>
@@ -174,33 +179,32 @@ Questions regarding this Statement or the practices of this Site should be direc
 
 
 
-
-   <div style="margin:-10px;">
+<div style="margin:-10px;">
 <!-- SC code version: H.2. -->
 <script language="JavaScript">
 s_account="salesforcencus,salesforcedev";
 </script>
-<script language="JavaScript" src="/web-common/js/omniture/s_code.js"></script><img name="s_i_salesforcencus" height="1" width="1" border="0" alt="" src="https://salesforce.122.2O7.net/b/ss/salesforcencus,salesforcedev/1/H.1-pdv-2/s02077020565752?[AQB]&amp;ndh=1&amp;t=31/0/2020%2013%3A17%3A13%205%200&amp;ns=salesforce&amp;pageName=CRM%20Software%20%7C%20Customer%20Relationship%20Management%20%28CRM%29&amp;g=https%3A//web.archive.org/web/20051215080904id_/http%253A//www.salesforce.com/statements.jsp%253Ffile%253Dprivacy%2526src%253Dweb&amp;cc=USD&amp;server=salesforce.com&amp;c1=web/20051215080904id_/http%253A/index.jsp/www.salesforce.com/statements.jsp%253Ffile%253Dprivacy%2526src%253Dweb&amp;h1=web/20051215080904id_/http%253A/index.jsp/www.salesforce.com/statements.jsp%253Ffile%253Dprivacy%2526src%253Dweb&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"> 
+<script language="JavaScript" src="/web-common/js/omniture/s_code2.js"></script><img name="s_i_salesforcencus" height="1" width="1" border="0" alt="" src="https://salesforce.122.2O7.net/b/ss/salesforcencus,salesforcedev/1/H.1-pdv-2/s08851044424781?[AQB]&amp;ndh=1&amp;t=31/0/2020%2013%3A17%3A14%205%200&amp;ce=UTF-8&amp;ns=salesforce&amp;pageName=CRM%20Software%20%7C%20Customer%20Relationship%20Management%20%28CRM%29&amp;g=https%3A//web.archive.org/web/20060615032732id_/http%253A//www.salesforce.com/statements.jsp%253Ffile%253Dprivacy%2526src%253Dweb&amp;cc=USD&amp;server=salesforce.com&amp;c1=/us/statements.jsp%3Ffile%3Dprivacy%26src%3Dweb&amp;h1=web/20060615032732id_/http%253A/index.jsp/www.salesforce.com/statements.jsp%253Ffile%253Dprivacy%2526src%253Dweb&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"> 
 <script language="JavaScript"><!--
-/* You may give each page an identifying name, server, and channel on
-the next lines. */
+/* vars */
 s.pageName=document.title
 s.server=""
 s.channel=""
 s.pageType=""
-s.prop1=""
+s.charSet="UTF-8"
+s.prop1="/us/statements.jsp?file=privacy&src=web"
 s.prop2=""
 s.prop3=""
-/* E-commerce Variables */
-s.campaign=""
-s.state=""
-s.zip=""
+s.campaign=""  // passing camp, campaignId, d, id, etc in via .js file
 s.events=""
-s.products=""
-s.purchaseID=""
-s.eVar1=""
-s.eVar2=""
-s.eVar3=""
+s.eVar1=""  // form abandonment
+s.eVar2=""  // internal search
+s.eVar3=""  // for search center
+s.eVar4=""  // country
+s.eVar5=""
+s.eVar6=""  // demo type
+//s.inlineStatsHandleMovie("060505_appforce_001")
+
 /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <script language="JavaScript"><!--
@@ -210,14 +214,15 @@ src="http://salesforcedev.122.2O7.net/b/ss/salesforcedev/1/H.1--NS/0"
 height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 <!-- End SC code version: H.1. -->
 </div>
-   
-   
-     
-   <!-- BEGIN WEB TRACKING v9.1.1 (11up) -->
+<!-- BEGIN WEB TRACKING v9.1.1 (11up) -->
 <script language="javascript" id="_hbc">
-var _acct="DM5309222KFD";	//account number(s)
-var _pn="statements.jsp?file=privacy&src=web"; //page name(s)
-var _mlc="/us/"; //multi-level content category
+var _acct="DM5309222KFD";
+
+// Xss-Protection
+
+
+var _pn="statements.jsp?file=privacy&src=web";
+var _mlc="/us/";
 var _seg=""; // visitor segmentation
 var _cmp=""; // campaign id
 var _gp="";  // campaign goal
@@ -235,12 +240,7 @@ var _hlt=""; // lead tracking
 var _hla=""; // lead attribute
 var _hqsr="";// response attribute in referrer query
 var _hqsp="";// response attribute in query
-var _hc1=""; // custom 1
-var _hc2=""; // custom 2
-var _hc3=""; // custom 3
-var _hc4=""; // custom 4
 var _lt="auto";  // link tracking
-var _ci="";  // customer id
 var _cp="null"; // campaign
 var _cpd=""; // campaign domain
 var _pndef="index.jsp"; //default page name
@@ -260,10 +260,7 @@ navigator.appVersion)==4)document.write("<\!"+"--")</script><noscript>
 <img src="https://ehg-salesforce.hitbox.com/HG?hc=we76&cd=1&hv=6&ce=u&hb=DM5309222KFD&n=statements.jsp?file=privacy&src=web&vcon=/us/&seg=&cmp=&gp=&fnl=&pec=&dcmp=&ra=&gn=&cv=&ld=&la=&c1=&c2=&c3=&c4=&vpc=090101rn" border="0" width="1" height="1">
 </noscript><!--//-->
 <!-- END WEB TRACKING CODE  -->
- 
 
 
 
-
-
-</center></body></html>
+</div></body></html>
